[gd_scene load_steps=13 format=4 uid="uid://cegtkklx0dkmw"]

[ext_resource type="Script" uid="uid://nuo7fwqncj3h" path="res://scripts/tutorial.gd" id="1_4kmhl"]
[ext_resource type="PackedScene" uid="uid://hm73vsi3860u" path="res://scenes/level_template.tscn" id="1_c13y7"]
[ext_resource type="Texture2D" uid="uid://dpklhthnoorni" path="res://assets/sprites/input_prompt.png" id="2_8ho6b"]
[ext_resource type="FontFile" uid="uid://dy4n1bik70bfr" path="res://assets/fonts/Tiny5-Regular.ttf" id="3_ph3nu"]
[ext_resource type="Texture2D" uid="uid://b0tgcnw2afai7" path="res://assets/sprites/map_guide.png" id="4_cq4me"]
[ext_resource type="TileSet" uid="uid://xgc2ng4pshoi" path="res://resources/dungeon.tres" id="6_6yjpi"]

[sub_resource type="Gradient" id="Gradient_glx5p"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.25490198, 0.18431373, 0.22352941, 0.5882353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4kmhl"]
gradient = SubResource("Gradient_glx5p")
width = 100
height = 100

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kmhl"]
size = Vector2(16, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yjpi"]
size = Vector2(14, 129.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbqnl"]
size = Vector2(30, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckvwl"]
size = Vector2(30, 31.25)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_4kmhl")

[node name="Level" parent="." instance=ExtResource("1_c13y7")]
level = 0

[node name="Instruction" type="Node2D" parent="."]
z_index = 50
position = Vector2(240, 110)

[node name="Backdrop" type="Sprite2D" parent="Instruction"]
texture = SubResource("GradientTexture2D_4kmhl")

[node name="Sprites" type="Node2D" parent="Instruction"]
position = Vector2(0, 9)
scale = Vector2(1.5, 1.5)

[node name="WASD" type="Node2D" parent="Instruction/Sprites"]

[node name="SpriteW" type="Sprite2D" parent="Instruction/Sprites/WASD"]
position = Vector2(1, -30)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 86

[node name="SpriteA" type="Sprite2D" parent="Instruction/Sprites/WASD"]
position = Vector2(-15, -13)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 120

[node name="SpriteS" type="Sprite2D" parent="Instruction/Sprites/WASD"]
position = Vector2(1, -13)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 121

[node name="SpriteD" type="Sprite2D" parent="Instruction/Sprites/WASD"]
position = Vector2(18, -13)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 122

[node name="SpaceSprite" type="Sprite2D" parent="Instruction/Sprites"]
position = Vector2(0, -21)
texture = ExtResource("2_8ho6b")
hframes = 11
vframes = 24
frame = 76

[node name="TrapSprite" type="Sprite2D" parent="Instruction/Sprites"]
modulate = Color(1, 1, 1, 0.78431374)
position = Vector2(0, -21)
texture = ExtResource("4_cq4me")
hframes = 3
frame = 2

[node name="SpriteQ" type="Sprite2D" parent="Instruction/Sprites"]
position = Vector2(1, -21)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 85

[node name="Leave" type="Node2D" parent="Instruction/Sprites"]
position = Vector2(1, -21)

[node name="SpriteEsc" type="Sprite2D" parent="Instruction/Sprites/Leave"]
position = Vector2(-12, 0)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 17

[node name="SpriteE" type="Sprite2D" parent="Instruction/Sprites/Leave"]
position = Vector2(12.333334, 0)
texture = ExtResource("2_8ho6b")
hframes = 34
vframes = 24
frame = 87

[node name="Label" type="Label" parent="Instruction"]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.8039216, 0.78039217, 0.7411765, 1)
theme_override_fonts/font = ExtResource("3_ph3nu")
text = "Monsters will kill you. Avoid them or lead them to traps."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAALAAMAAAADAAUAAAALAAQAAAADAAUAAAALAAUAAAADAAUAAAALAAYAAAADAAUAAAALAAcAAAADAAUAAAALAAgAAAADAAUAAAALAAkAAAADAAUAAAALAAoAAAADAAUAAAAVAAUAAAADAAUAAAAVAAYAAAADAAUAAAAVAAcAAAADAAUAAAA=")
tile_set = ExtResource("6_6yjpi")

[node name="ThirdArea" type="Node2D" parent="."]
position = Vector2(346, 106)

[node name="EntranceArea" type="Area2D" parent="ThirdArea"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdArea/EntranceArea"]
shape = SubResource("RectangleShape2D_4kmhl")

[node name="ExitArea" type="Area2D" parent="ThirdArea"]
position = Vector2(95, -44)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdArea/ExitArea"]
position = Vector2(3, 50.25)
shape = SubResource("RectangleShape2D_6yjpi")

[node name="FourthArea" type="Node2D" parent="."]
position = Vector2(632, 238)

[node name="EntranceArea" type="Area2D" parent="FourthArea"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FourthArea/EntranceArea"]
position = Vector2(-7, -7.25)
shape = SubResource("RectangleShape2D_gbqnl")

[node name="FifthArea" type="Node2D" parent="."]
position = Vector2(636, 238)

[node name="EntranceArea" type="Area2D" parent="FifthArea"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FifthArea/EntranceArea"]
position = Vector2(-541, 98.375)
shape = SubResource("RectangleShape2D_ckvwl")

[connection signal="body_entered" from="ThirdArea/EntranceArea" to="." method="_on_third_area_entrance_area_body_entered"]
[connection signal="body_entered" from="ThirdArea/ExitArea" to="." method="_on_third_area_exit_area_body_entered"]
[connection signal="body_entered" from="FourthArea/EntranceArea" to="." method="_on_fourth_area_entrance_area_body_entered"]
[connection signal="body_entered" from="FifthArea/EntranceArea" to="." method="_on_fifth_area_entrance_area_body_entered"]
